syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package juice.audit.grpc;

message DataAuditMessage {
  google.protobuf.StringValue user = 1;
  google.protobuf.Timestamp datetime = 2;
  string action = 3;
  google.protobuf.StringValue database = 4;
  google.protobuf.StringValue schema = 5;
  string table = 6;
  bytes keyValues = 7;
  bytes dataChanges = 8;
  google.protobuf.StringValue reqId = 9;
}

message AccessLogMessage{
  google.protobuf.StringValue user = 1;
  google.protobuf.Timestamp datetime = 2;
  string action = 3;
  google.protobuf.StringValue reqId = 4;
  bytes metadata = 5;

  string reqMethod = 6;
  google.protobuf.StringValue reqHost = 7;
  string reqPath = 8;
  bytes reqData = 9;
  google.protobuf.StringValue reqQuery = 10;
  bytes reqHeaders = 11;
  google.protobuf.StringValue reqScheme = 12;
  google.protobuf.StringValue reqRemoteIp = 13;
  google.protobuf.StringValue reqZone = 14;

  google.protobuf.Int32Value resStatus = 15;
  bytes resHeaders = 16;
  bytes resData = 17;
  bytes resErr = 18;
  bytes resMsg = 19;
  google.protobuf.Int64Value resElapsed = 20;

  google.protobuf.StringValue srvMachine = 21;
  google.protobuf.StringValue srvOS = 22;
  google.protobuf.StringValue srvAppVer = 23;
  google.protobuf.StringValue srvApp = 24;

  bool restricted = 25;
}

message AuditRequest{
   AccessLogMessage accessLog = 1;
   repeated DataAuditMessage auditEntries = 2;
}

message AuditOperationResult{
    bool succeeded = 1;
    google.protobuf.StringValue message = 2;
}

service AuditGrpcService {
  rpc Log(AuditRequest) returns (AuditOperationResult) {}
}
